// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin/wechat-oa/account index 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "/admin-api/wechat-oa/account",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;

exports[`admin/wechat-oa/account index 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "/admin-api/wechat-oa/account",
      },
    ],
    Array [
      Object {
        "data": Object {
          "applicationId": "appId2",
          "applicationSecret": "appSecret2",
          "authScope": "snsapi_userinfo",
          "type": 1,
        },
        "loading": true,
        "method": "patch",
        "url": "/admin-api/wechat-oa/account",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;
